// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a full article with all content items with dropcap template 1`] = `
<View>
  <RCTScrollView
    initialNumToRender={3}
    maxToRenderPerBatch={10}
    nestedScrollEnabled={true}
    onEndReachedThreshold={2}
    removeClippedSubviews={true}
    scrollEventThrottle={50}
    showsVerticalScrollIndicator={false}
    updateCellsBatchingPeriod={50}
    windowSize={3}
  >
    <View>
      <View>
        <View />
      </View>
      <View>
        <View>
          <Text>
            T
          </Text>
          <View>
            <View>
              <Text
                numberOfLines={1}
                selectable={true}
              >
                his
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
              >
                being
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
              >
                Black
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
              >
                History
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
              >
                Month,
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
              >
                last
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
              >
                week
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View>
          <View>
            <InteractiveWrapper
              id="d2f83305-d558-4f78-f582-32115c659355"
            />
          </View>
        </View>
      </View>
      <View />
    </View>
  </RCTScrollView>
</View>
`;

exports[`2. an article with interactives 1`] = `
<View>
  <RCTScrollView
    initialNumToRender={3}
    maxToRenderPerBatch={10}
    nestedScrollEnabled={true}
    onEndReachedThreshold={2}
    removeClippedSubviews={true}
    scrollEventThrottle={50}
    showsVerticalScrollIndicator={false}
    updateCellsBatchingPeriod={50}
    windowSize={3}
  >
    <View>
      <View>
        <View />
      </View>
      <View>
        <View>
          <View>
            <InteractiveWrapper
              id="d2f83305-d558-4f78-f582-32115c659355"
            />
          </View>
        </View>
      </View>
      <View>
        <View>
          <View>
            <InteractiveWrapper
              id="abc"
            />
          </View>
        </View>
      </View>
      <View />
    </View>
  </RCTScrollView>
</View>
`;

exports[`3. an article with no content 1`] = `
<View>
  <RCTScrollView
    initialNumToRender={3}
    maxToRenderPerBatch={10}
    nestedScrollEnabled={true}
    onEndReachedThreshold={2}
    removeClippedSubviews={true}
    scrollEventThrottle={50}
    showsVerticalScrollIndicator={false}
    updateCellsBatchingPeriod={50}
    windowSize={3}
  >
    <View>
      <View>
        <View />
      </View>
      <View>
        <View>
          <ArticleExtras
            articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
            articleUrl="https://url.io"
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`4. an article with a nested markup in first paragraph displays a drop cap 1`] = `
<View>
  <RCTScrollView
    initialNumToRender={3}
    maxToRenderPerBatch={10}
    nestedScrollEnabled={true}
    onEndReachedThreshold={2}
    removeClippedSubviews={true}
    scrollEventThrottle={50}
    showsVerticalScrollIndicator={false}
    updateCellsBatchingPeriod={50}
    windowSize={3}
  >
    <View>
      <View>
        <View />
      </View>
      <View>
        <View>
          <Text>
            Q
          </Text>
          <View>
            <View>
              <Text
                numberOfLines={1}
                selectable={true}
              >
                Some
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
              >
                years
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
              >
                ago
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
              >
                I
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
              >
                made
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
              >
                the
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
              >
                decision
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
              >
                to
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
              >
                take
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
              >
                as
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
              >
                a
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
              >
                friend
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
              >
                a
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
              >
                woman
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
              >
                who
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
              >
                is
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
              >
                very
              </Text>
              <Text
                numberOfLines={1}
                selectable={true}
              >
                opinionated.
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View>
          <View>
            <View>
              <Text>
                <Text>
                  When she does come to social events, she dominates.
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View />
    </View>
  </RCTScrollView>
</View>
`;

exports[`6. an inline link reports analytics event on press 1`] = `
Object {
  "action": "Pressed",
  "attrs": Object {
    "articleId": "198c4b2f-ecec-4f34-be53-c89f83bc1b44",
    "article_topic_tags": Array [
      "topic",
    ],
    "bylines": "Some byline",
    "edition_type": "past 6 days",
    "eventTime": "2018-01-01T00:00:00.000Z",
    "headline": "Some Headline",
    "label": "Some Label",
    "linkType": "",
    "linkUrl": "https://link.io",
    "pageName": "this-is-slug-2k629tpvh",
    "parent_site": "TIMES",
    "past_edition_date": "2015-03-13T18:54:58.000Z",
    "published_time": "2015-03-13T18:54:58.000Z",
    "referral_url": "referralUrl.com",
    "section": "Some Section",
    "template": "mainstandard",
  },
  "component": "ArticleLink",
  "object": "Article",
}
`;
